[gd_scene load_steps=34 format=3 uid="uid://cwtjvhkfpj8ya"]

[ext_resource type="Script" path="res://player.gd" id="1_0i62y"]
[ext_resource type="Script" path="res://wall.gd" id="2_6sw12"]
[ext_resource type="PackedScene" uid="uid://byigjw6ypjv5n" path="res://player/human_03_00.tscn" id="2_byq0x"]
[ext_resource type="Script" path="res://boundaries.gd" id="2_pcsaw"]
[ext_resource type="Script" path="res://all_platforms.gd" id="5_trm1l"]
[ext_resource type="PackedScene" uid="uid://df0o5t0d5jqli" path="res://platform-5_00.tscn" id="5_y2lln"]
[ext_resource type="PackedScene" uid="uid://bgjk518k86wey" path="res://platform-2_00.tscn" id="6_fwm3j"]
[ext_resource type="PackedScene" uid="uid://46tstyywyhx8" path="res://platform-1_00.tscn" id="7_tf02s"]
[ext_resource type="PackedScene" uid="uid://dp1so6y3s8kna" path="res://enemy-5_00.tscn" id="8_a2xvh"]
[ext_resource type="PackedScene" uid="uid://cm0bwxh43ilpf" path="res://platform-4_00.tscn" id="8_gvvhl"]
[ext_resource type="Script" path="res://all_enemies.gd" id="10_2fmjq"]
[ext_resource type="PackedScene" uid="uid://dfjaalolso6t1" path="res://enemy_4_00.tscn" id="10_mcp35"]
[ext_resource type="PackedScene" uid="uid://s530se5wb3d6" path="res://enemy_3_00.tscn" id="11_ny747"]
[ext_resource type="Script" path="res://wrap.gd" id="12_c6wka"]
[ext_resource type="PackedScene" uid="uid://danwt3o2m5nkh" path="res://wrapper.tscn" id="12_q4olf"]
[ext_resource type="Script" path="res://debug.gd" id="15_v8146"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_wsek7"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_bhqg5"]
sky_material = SubResource("ProceduralSkyMaterial_wsek7")

[sub_resource type="Environment" id="Environment_yr3j7"]
background_mode = 2
sky = SubResource("Sky_bhqg5")
tonemap_mode = 2

[sub_resource type="BoxMesh" id="BoxMesh_3ptw0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0j0yx"]
size = Vector3(0.009, 1, 0.999)

[sub_resource type="PlaneMesh" id="PlaneMesh_vgdm5"]
size = Vector2(29, 16)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j4mdq"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_0yht1"]
size = Vector2(29, 8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q71l3"]
albedo_color = Color(0, 0.196078, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_qo2rm"]
size = Vector3(29, 1, 8)

[sub_resource type="BoxMesh" id="BoxMesh_nb68i"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pwxq0"]

[sub_resource type="BoxMesh" id="BoxMesh_x8n22"]
size = Vector3(88.225, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_6o4v0"]
size = Vector3(3.5, 3, 0.505)

[sub_resource type="BoxShape3D" id="BoxShape3D_ctqwv"]
size = Vector3(3.5, 3, 0.505)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldlj4"]
bg_color = Color(1, 1, 1, 0.321569)

[sub_resource type="FontVariation" id="FontVariation_pm3h4"]
spacing_top = 3
spacing_bottom = -15
baseline_offset = -0.15

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.694658, 0.71934, 0, -0.71934, 0.694658, 0.5, 5.815, -1.3)
projection = 1
size = 9.85
far = 148.4

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yr3j7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.6, -1)
script = ExtResource("1_0i62y")

[node name="human_03_00" parent="Player" instance=ExtResource("2_byq0x")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, -0.458401, 0)

[node name="mesh" type="MeshInstance3D" parent="Player"]
visible = false
mesh = SubResource("BoxMesh_3ptw0")
skeleton = NodePath("../..")

[node name="collision" type="CollisionShape3D" parent="Player"]
shape = SubResource("BoxShape3D_0j0yx")

[node name="ray_forward_l" type="RayCast3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.49, 0, 0)
target_position = Vector3(0, 0, -0.5)
collide_with_areas = true
collide_with_bodies = false

[node name="ray_forward_r" type="RayCast3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.49, 0, 0)
target_position = Vector3(0, 0, -0.5)
collide_with_areas = true
collide_with_bodies = false

[node name="ray_back_l" type="RayCast3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.49, 0, 0)
target_position = Vector3(0, 0, 0.5)
collide_with_areas = true
collide_with_bodies = false

[node name="ray_back_r" type="RayCast3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.49, 0, 0)
target_position = Vector3(0, 0, 0.5)
collide_with_areas = true
collide_with_bodies = false

[node name="ray_left_l" type="RayCast3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.49)
target_position = Vector3(-0.5, 0, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="ray_left_r" type="RayCast3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.49)
target_position = Vector3(-0.5, 0, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="ray_right_l" type="RayCast3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.49)
target_position = Vector3(0.5, 0, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="ray_right_r" type="RayCast3D" parent="Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.49)
target_position = Vector3(0.5, 0, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="Ground_lower" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.9, -13.5)
mesh = SubResource("PlaneMesh_vgdm5")
surface_material_override/0 = SubResource("StandardMaterial3D_j4mdq")

[node name="Rows_0-7" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="Rows_0-7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -3.5)

[node name="mesh" type="MeshInstance3D" parent="Rows_0-7/Ground"]
cast_shadow = 0
mesh = SubResource("PlaneMesh_0yht1")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_q71l3")

[node name="collision" type="CollisionShape3D" parent="Rows_0-7/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_qo2rm")

[node name="Debug" type="Node3D" parent="."]

[node name="Colliders" type="Node3D" parent="Debug"]

[node name="Wall" type="Area3D" parent="Debug/Colliders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0.6, 0)
script = ExtResource("2_6sw12")

[node name="mesh" type="MeshInstance3D" parent="Debug/Colliders/Wall"]
mesh = SubResource("BoxMesh_nb68i")

[node name="collision" type="CollisionShape3D" parent="Debug/Colliders/Wall"]
shape = SubResource("BoxShape3D_pwxq0")

[node name="Wall2" type="Area3D" parent="Debug/Colliders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.6, 0)
script = ExtResource("2_6sw12")

[node name="mesh" type="MeshInstance3D" parent="Debug/Colliders/Wall2"]
mesh = SubResource("BoxMesh_nb68i")

[node name="collision" type="CollisionShape3D" parent="Debug/Colliders/Wall2"]
shape = SubResource("BoxShape3D_pwxq0")

[node name="Boundaries" type="Node3D" parent="Debug"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)
script = ExtResource("2_pcsaw")

[node name="left_boundary" type="MeshInstance3D" parent="Debug/Boundaries"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -14, 0, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_x8n22")
skeleton = NodePath("../../..")

[node name="front_boundary" type="MeshInstance3D" parent="Debug/Boundaries"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)
cast_shadow = 0
mesh = SubResource("BoxMesh_x8n22")
skeleton = NodePath("../../..")

[node name="right_boundary" type="MeshInstance3D" parent="Debug/Boundaries"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 14, 0, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_x8n22")
skeleton = NodePath("../../..")

[node name="back_boundary" type="MeshInstance3D" parent="Debug/Boundaries"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11)
cast_shadow = 0
mesh = SubResource("BoxMesh_x8n22")
skeleton = NodePath("../../..")

[node name="Platforms" type="Node3D" parent="Debug"]
script = ExtResource("5_trm1l")
rows_type = 1

[node name="Platform-1_00" parent="Debug/Platforms" instance=ExtResource("7_tf02s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, -0.4, -11)
row = 11.0
speed = 4.0
direction = -1

[node name="Platform-1_01" parent="Debug/Platforms" instance=ExtResource("7_tf02s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.4, -0.4, -11)
row = 11.0
speed = 4.0
direction = -1

[node name="Platform-1_12" parent="Debug/Platforms" instance=ExtResource("7_tf02s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.4, -0.4, -11)
row = 11.0
speed = 4.0
direction = -1

[node name="Platform-1_13" parent="Debug/Platforms" instance=ExtResource("7_tf02s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6, -0.4, -11)
row = 11.0
speed = 4.0
direction = -1

[node name="Platform-5_00" parent="Debug/Platforms" instance=ExtResource("5_y2lln")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.4, -10)
row = 10.0
speed = 4.0
direction = 1

[node name="Platform-5_02" parent="Debug/Platforms" instance=ExtResource("5_y2lln")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.5, -0.4, -10)
row = 10.0
speed = 4.0
direction = 1

[node name="Platform-5_03" parent="Debug/Platforms" instance=ExtResource("5_y2lln")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5, -0.4, -10)
row = 10.0
speed = 4.0
direction = 1

[node name="Platform-4_00" parent="Debug/Platforms" instance=ExtResource("8_gvvhl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5, -0.4, -12)
row = 12.0
speed = 4.0
direction = 1

[node name="Platform-4_01" parent="Debug/Platforms" instance=ExtResource("8_gvvhl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.5, -0.4, -12)
row = 12.0
speed = 4.0
direction = 1

[node name="Platform-4_02" parent="Debug/Platforms" instance=ExtResource("8_gvvhl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.4, -12)
row = 12.0
speed = 4.0
direction = 1

[node name="Platform-4_03" parent="Debug/Platforms" instance=ExtResource("8_gvvhl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.5, -0.4, -12)
row = 12.0
speed = 4.0
direction = 1

[node name="Platform-4_05" parent="Debug/Platforms" instance=ExtResource("8_gvvhl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, -0.4, -12)
row = 12.0
speed = 4.0
direction = 1

[node name="Platform-1_07" parent="Debug/Platforms" instance=ExtResource("6_fwm3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -0.4, -9)
row = 9.0
speed = 6.0
direction = 1

[node name="Platform-1_09" parent="Debug/Platforms" instance=ExtResource("6_fwm3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.4, -9)
row = 9.0
speed = 6.0
direction = 1

[node name="Platform-1_10" parent="Debug/Platforms" instance=ExtResource("6_fwm3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -0.4, -9)
row = 9.0
speed = 6.0
direction = 1

[node name="Platform-1_11" parent="Debug/Platforms" instance=ExtResource("6_fwm3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -0.4, -9)
row = 9.0
speed = 6.0
direction = 1

[node name="Platform-1_08" parent="Debug/Platforms" instance=ExtResource("6_fwm3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, -0.4, -9)
row = 9.0
speed = 6.0
direction = 1

[node name="Platform-1_02" parent="Debug/Platforms" instance=ExtResource("6_fwm3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, -0.4, -8)
row = 8.0
speed = 6.0
direction = -1

[node name="Platform-1_03" parent="Debug/Platforms" instance=ExtResource("6_fwm3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, -0.4, -8)
row = 8.0
speed = 6.0
direction = -1

[node name="Platform-1_04" parent="Debug/Platforms" instance=ExtResource("6_fwm3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.4, -8)
row = 8.0
speed = 6.0
direction = -1

[node name="Platform-1_05" parent="Debug/Platforms" instance=ExtResource("6_fwm3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -0.4, -8)
row = 8.0
speed = 6.0
direction = -1

[node name="Platform-1_06" parent="Debug/Platforms" instance=ExtResource("6_fwm3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -0.4, -8)
row = 8.0
speed = 6.0
direction = -1

[node name="Enemies" type="Node3D" parent="Debug"]
script = ExtResource("10_2fmjq")

[node name="Enemy-5_00" parent="Debug/Enemies" instance=ExtResource("8_a2xvh")]
row = 6.0

[node name="Enemy-5_01" parent="Debug/Enemies" instance=ExtResource("8_a2xvh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0.5, -6)
row = 6.0

[node name="Enemy-5_02" parent="Debug/Enemies" instance=ExtResource("8_a2xvh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.5, -6)
row = 6.0

[node name="Enemy-4_00" parent="Debug/Enemies" instance=ExtResource("10_mcp35")]
row = 2.0

[node name="Enemy-4_03" parent="Debug/Enemies" instance=ExtResource("10_mcp35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.6, -2)
row = 2.0

[node name="Enemy-4_04" parent="Debug/Enemies" instance=ExtResource("10_mcp35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.6, -2)
row = 2.0

[node name="Enemy-4_01" parent="Debug/Enemies" instance=ExtResource("10_mcp35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.6, -4)
row = 4.0

[node name="Enemy-4_02" parent="Debug/Enemies" instance=ExtResource("10_mcp35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.6, -4)
row = 4.0

[node name="Enemy-3_00" parent="Debug/Enemies" instance=ExtResource("11_ny747")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.28986, -3)
row = 3.0

[node name="Enemy-3_04" parent="Debug/Enemies" instance=ExtResource("11_ny747")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, -0.28986, -3)
row = 3.0

[node name="Enemy-3_05" parent="Debug/Enemies" instance=ExtResource("11_ny747")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -0.28986, -3)
row = 3.0

[node name="Enemy-3_01" parent="Debug/Enemies" instance=ExtResource("11_ny747")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -0.28986, -5)
row = 5.0

[node name="Enemy-3_02" parent="Debug/Enemies" instance=ExtResource("11_ny747")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.28986, -5)
row = 5.0

[node name="Enemy-3_03" parent="Debug/Enemies" instance=ExtResource("11_ny747")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.28986, -5)
row = 5.0

[node name="Wrappers" type="Node3D" parent="."]

[node name="Wrappers_plats" type="Node3D" parent="Wrappers"]

[node name="Wrapper_row10" type="Node3D" parent="Wrappers/Wrappers_plats"]

[node name="Wrapper_L" type="Area3D" parent="Wrappers/Wrappers_plats/Wrapper_row10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.6, 0, -10)
script = ExtResource("12_c6wka")
target_type = 2

[node name="collision" type="CollisionShape3D" parent="Wrappers/Wrappers_plats/Wrapper_row10/Wrapper_L"]
shape = SubResource("BoxShape3D_6o4v0")

[node name="Wrapper_R" type="Area3D" parent="Wrappers/Wrappers_plats/Wrapper_row10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.4, 0, -10)
script = ExtResource("12_c6wka")
target_type = 2

[node name="collision" type="CollisionShape3D" parent="Wrappers/Wrappers_plats/Wrapper_row10/Wrapper_R"]
shape = SubResource("BoxShape3D_ctqwv")

[node name="Wrapper_row11" type="Node3D" parent="Wrappers/Wrappers_plats"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Wrapper_L" type="Area3D" parent="Wrappers/Wrappers_plats/Wrapper_row11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.6, 0, -10)
script = ExtResource("12_c6wka")
target_type = 2

[node name="collision" type="CollisionShape3D" parent="Wrappers/Wrappers_plats/Wrapper_row11/Wrapper_L"]
shape = SubResource("BoxShape3D_6o4v0")

[node name="Wrapper_R" type="Area3D" parent="Wrappers/Wrappers_plats/Wrapper_row11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.4, 0, -10)
script = ExtResource("12_c6wka")
target_type = 2

[node name="collision" type="CollisionShape3D" parent="Wrappers/Wrappers_plats/Wrapper_row11/Wrapper_R"]
shape = SubResource("BoxShape3D_ctqwv")

[node name="Wrapper_row12" type="Node3D" parent="Wrappers/Wrappers_plats"]

[node name="Wrapper_L" type="Area3D" parent="Wrappers/Wrappers_plats/Wrapper_row12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.6, 0, -11.975)
script = ExtResource("12_c6wka")
target_type = 2

[node name="collision" type="CollisionShape3D" parent="Wrappers/Wrappers_plats/Wrapper_row12/Wrapper_L"]
shape = SubResource("BoxShape3D_6o4v0")

[node name="Wrapper_R" type="Area3D" parent="Wrappers/Wrappers_plats/Wrapper_row12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.95, 0, -11.975)
script = ExtResource("12_c6wka")
target_type = 2

[node name="collision" type="CollisionShape3D" parent="Wrappers/Wrappers_plats/Wrapper_row12/Wrapper_R"]
shape = SubResource("BoxShape3D_ctqwv")

[node name="Wrapper_row9" type="Node3D" parent="Wrappers/Wrappers_plats"]

[node name="Wrapper_L" type="Area3D" parent="Wrappers/Wrappers_plats/Wrapper_row9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.6, 0, -8.975)
script = ExtResource("12_c6wka")
target_type = 2

[node name="collision" type="CollisionShape3D" parent="Wrappers/Wrappers_plats/Wrapper_row9/Wrapper_L"]
shape = SubResource("BoxShape3D_6o4v0")

[node name="Wrapper_R" type="Area3D" parent="Wrappers/Wrappers_plats/Wrapper_row9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.45, 0, -8.975)
script = ExtResource("12_c6wka")
target_type = 2

[node name="collision" type="CollisionShape3D" parent="Wrappers/Wrappers_plats/Wrapper_row9/Wrapper_R"]
shape = SubResource("BoxShape3D_ctqwv")

[node name="Wrapper_row8" type="Node3D" parent="Wrappers/Wrappers_plats"]

[node name="Wrapper_L" type="Area3D" parent="Wrappers/Wrappers_plats/Wrapper_row8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.9, 0, -7.975)
script = ExtResource("12_c6wka")
target_type = 2

[node name="collision" type="CollisionShape3D" parent="Wrappers/Wrappers_plats/Wrapper_row8/Wrapper_L"]
shape = SubResource("BoxShape3D_6o4v0")

[node name="Wrapper_R" type="Area3D" parent="Wrappers/Wrappers_plats/Wrapper_row8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6, 0, -7.975)
script = ExtResource("12_c6wka")
target_type = 2

[node name="collision" type="CollisionShape3D" parent="Wrappers/Wrappers_plats/Wrapper_row8/Wrapper_R"]
shape = SubResource("BoxShape3D_ctqwv")

[node name="Wrappers_enemy" type="Node3D" parent="Wrappers"]

[node name="Wrapper_L" parent="Wrappers/Wrappers_enemy" instance=ExtResource("12_q4olf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.7, 0, -6.5)
target_type = 1

[node name="Wrapper_R" parent="Wrappers/Wrappers_enemy" instance=ExtResource("12_q4olf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.7, 0, -6.5)
target_type = 1

[node name="Wrappers_player" type="Node3D" parent="Wrappers"]

[node name="Wrapper_L" parent="Wrappers/Wrappers_player" instance=ExtResource("12_q4olf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.25, 0, -6.5)

[node name="Wrapper_R" parent="Wrappers/Wrappers_player" instance=ExtResource("12_q4olf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.05, 0, -6.5)

[node name="Canvas_debug" type="CanvasLayer" parent="."]
layer = 128
script = ExtResource("15_v8146")

[node name="MarginContainer" type="MarginContainer" parent="Canvas_debug"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel_rowSpeed" type="Panel" parent="Canvas_debug/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ldlj4")

[node name="HBox_rowSpeed" type="HBoxContainer" parent="Canvas_debug/MarginContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label_rowSpeed" type="Label" parent="Canvas_debug/MarginContainer/HBox_rowSpeed"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = SubResource("FontVariation_pm3h4")
theme_override_font_sizes/font_size = 20
text = "Adjust
row speed"
horizontal_alignment = 2

[node name="Option_rowType" type="OptionButton" parent="Canvas_debug/MarginContainer/HBox_rowSpeed"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
item_count = 2
popup/item_0/text = "Enemy"
popup/item_1/text = "Platform"
popup/item_1/id = 1

[node name="Line_rowNumber" type="LineEdit" parent="Canvas_debug/MarginContainer/HBox_rowSpeed"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Row #"

[node name="Line_rowSpeed" type="LineEdit" parent="Canvas_debug/MarginContainer/HBox_rowSpeed"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Speed"

[node name="Button_rowUpdate" type="Button" parent="Canvas_debug/MarginContainer/HBox_rowSpeed"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Update"
